Move create batch button to top

--- a/src/views/Prizes/PrizeBatch.styl
+++ b/src/views/Prizes/PrizeBatch.styl
@@ -11,7 +11,7 @@
     margin-bottom 20px
 
     h2
-        themed color primary
+        themed color fg
         margin-bottom 10px
 
     p
@@ -27,7 +27,7 @@
         margin-bottom 10px
 
         h3
-            themed color primary
+            themed color fg
             margin 0
 
         .actions
