--- a/src/views/User/User.styl
+++ b/src/views/User/User.styl
@@ -58,7 +58,12 @@
     }
 
     .vote-outcome-summary {
-        height: 200px;
+        height: 150px;
+    }
+
+    .empty-vote-outcome-summary {
+        height: 2rem;
+        margin: 0.2rem 0 0 1rem;
     }
 
     .name-input {
