--- a/src/views/Prizes/PrizeRedemption.styl
+++ b/src/views/Prizes/PrizeRedemption.styl
@@ -51,7 +51,7 @@
         margin-bottom 20px
 
         h3
-            themed color primary
+            themed color fg
             margin-bottom 10px
 
         ul
@@ -64,14 +64,15 @@
             justify-content flex-end
 
             button
-                themed background-color primary
-                themed color colored-background-fg
                 border none
                 padding 10px 20px
                 border-radius 5px
                 cursor pointer
                 font-size 16px
                 margin-left 10px
+
+                &.disabled
+                    cursor not-allowed
 
     .success-message
         text-align center
