--- a/src/views/Prizes/PrizeBatch.styl
+++ b/src/views/Prizes/PrizeBatch.styl
@@ -83,7 +83,7 @@
     width 100%
 
     h3
-        themed color primary
+        themed color fg
         margin-bottom 20px
         text-align center
 
