Tweak layout of CM activity charts

--- a/src/views/User/User.styl
+++ b/src/views/User/User.styl
@@ -50,7 +50,7 @@
     }
 
     .mod-graph-header {
-        margin: 0.5rem 0 5px 0.5rem !important;
+        margin: 0.5rem 0 0.5rem 0.5rem !important;
     }
 
     .vote-activity-graph {
