Add text to supporter page indicating prize expiration

--- a/src/views/Supporter/Supporter.styl
+++ b/src/views/Supporter/Supporter.styl
@@ -78,6 +78,10 @@
         }
     }
 
+    .prize-status {
+         themed color danger
+    }
+
     .Subscription {
         text-align: center;
 
