cssed the last row (final action) of game timing up to the top to reduce scrolling to find it

--- a/src/views/Game/GameTimings.styl
+++ b/src/views/Game/GameTimings.styl
@@ -48,4 +48,9 @@
     .span-4 {
         grid-column: span 4;
     }
+
+    .final-action-row {
+        grid-row: 2; // final action time at the top for easy viewing in escape cases
+        padding-bottom: 0.2rem;
+    }
 }
