Add wsc2024 achievement stuff

--- a/src/components/Achievements/AchievementList.styl
+++ b/src/components/Achievements/AchievementList.styl
@@ -14,9 +14,7 @@
  * You should have received a copy of the GNU Affero General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-
 .AchievementList {
-
 }
 
 .AchievementEntry {
@@ -40,12 +38,13 @@
         .title {
             font-weight: bold;
         }
+
         .description {
             font-size: smaller;
         }
     }
 
-    &.wdc2021, &.wsc2022, &.wsc2023 {
+    &.wdc2021, &.wsc2022, &.wsc2023, &.wsc2024 {
         .icon {
             background-image: url('/achievements/wdc2021.png');
         }
