Added a graph showing percentage of concensus/non/escalated.  Also got rid of "current week" from totals graph.

--- a/src/views/ReportsCenter/ReportsCenterCMInfo.styl
+++ b/src/views/ReportsCenter/ReportsCenterCMInfo.styl
@@ -3,6 +3,12 @@
     margin-left: 2rem;
 
     .aggregate-vote-activity-graph {
-        height: 200px;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+
+        .percent-graph, .totals-graph {
+            height: 50%
+        }
     }
 }
