Tell the user how many more characters they have to type

--- a/src/components/Report/Report.styl
+++ b/src/components/Report/Report.styl
@@ -78,11 +78,24 @@
         }
     }
 
+    .notes {
+        margin-bottom: 1px;
+    }
+
+    .characters-remaining-prompt {
+        font-style: italic;
+        font-size: smaller;
+        text-align: end;
+        themed color shade1;
+    }
+
     .buttons {
         flex: 0;
         display: flex;
         justify-content: space-between;
+        margin-top: 1px;
     }
+
     .required {
         themed border-color primary;
 
