Initial free trial and supporter status expiration banners

--- a/src/components/FreeTrialBanner/LearnMore.styl
+++ b/src/components/FreeTrialBanner/LearnMore.styl
@@ -1,3 +1,4 @@
+
 /*
  * Copyright (C)  Online-Go.com
  *
@@ -15,6 +16,24 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-export * from "./Notifications";
-export * from "./NotificationManager";
-export * from "./hooks";
+
+.LearnMore {
+    max-width: 90vw;
+    width: 50rem;
+    max-height: 90vh;
+    //height: 45rem;
+    
+    p {
+        padding-left: 1rem;
+        padding-right: 1rem;
+        
+        img {
+            float: left;
+            margin-right: 1rem;
+            max-width: 100%;
+            height: auto;
+            max-height: 150px;
+            
+        }
+    }
+}
