--- a/src/global_styl/global.styl
+++ b/src/global_styl/global.styl
@@ -488,6 +488,14 @@ a.btn, .btn {
     }
 }
 
+a.btn {
+    display: inline-flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+}
+
 for cls in primary info success danger reject
     button.{cls}, a.btn.{cls}, .btn.{cls} {
         themed color colored-background-fg
