--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -167,6 +167,8 @@ light.chart-line                        = #184A6B
 light.error-boundary-bg                 = lighten(light.reject, 50%)
 light.error-boundary-fg                 = darken(light.reject, 50%)
 light.warning-bg                        = #FFAE2C
+light.supporter-error-bg                = hsl(23, 100, 90);
+light.supporter-error-border            = hsl(23, 100, 80);
 
 
 //light.help-popup-bg                     = #D471DA
@@ -314,6 +316,8 @@ dark.chart-line                         = #329BE0
 dark.error-boundary-bg                  = darken(light.reject, 50%)
 dark.error-boundary-fg                  = lighten(light.reject, 50%)
 dark.warning-bg                         = #925A00
+dark.supporter-error-bg                 = hsl(23, 100, 10);
+dark.supporter-error-border             = hsl(23, 100, 30);
 
 //dark.help-popup-bg                     = #4E134C
 dark.help-popup-bg                      = dark.primary
