Add support for saving free trial for later

--- a/src/components/FreeTrialBanner/FreeTrialBanner.styl
+++ b/src/components/FreeTrialBanner/FreeTrialBanner.styl
@@ -32,6 +32,7 @@
     width: 60rem;
     max-width: calc(min(100%, 100vw));
     min-height: 12rem;
+    overflow: hidden;
     
     @media screen and (max-width: 850px){
         flex-direction: column;
