--- a/src/views/ReportsCenter/ViewReport.styl
+++ b/src/views/ReportsCenter/ViewReport.styl
@@ -174,6 +174,12 @@
             input {
                 margin-bottom: 3px; // override bizarre default 0 margin bottom so text lines up properly
             }
+
+            .vote-count {
+                font-size: x-small;
+                vertical-align: middle;
+                padding-left: 5px;
+            }
         }
 
         button {
