Support paragraphs in canned messages

--- a/src/components/AccountWarning/AccountWarning.styl
+++ b/src/components/AccountWarning/AccountWarning.styl
@@ -25,6 +25,11 @@
     z-index: z.account-warning;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
+.canned-message {
+    white-space: pre-line;
+}
+
 .AccountWarning {
     position: fixed;
     top: auto;
@@ -50,7 +55,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 
     .AutoTranslate {
         font-size: 1.5rem;
@@ -154,7 +158,4 @@
         cursor: pointer;
         margin-right: 1rem;
     }
-
-
-
 }
