Update server decision display to use the AI position outputs and be clearer about why the game ended

--- a/src/views/Game/PlayControls.styl
+++ b/src/views/Game/PlayControls.styl
@@ -133,4 +133,12 @@
         bottom: 0.5em;
         */
     }
+    
+    .stalling-score-estimate {
+        margin: 0.5rem;
+        font-size: 1.0rem;
+        font-style: italic;
+        text-wrap: balance;
+        text-wrap-mode: balance;
+    }
 }
