--- a/src/views/Play/Play.styl
+++ b/src/views/Play/Play.styl
@@ -364,7 +364,7 @@
             white-space: normal;
         }
 
-        .cell:hover .cheat-alert-tooltiptext {
+        .cell:hover .cheat-alert-tooltip-text {
             visibility: visible;
         }
 
