Add handicap to game history table

--- a/src/views/User/User.styl
+++ b/src/views/User/User.styl
@@ -492,13 +492,20 @@
           themed color strong-loss
         }
 
+        .board_size {
+            padding-right: 0.5em;
+        }
+
+        .handicap {
+            padding-right: 0.5em;
+        }
+
         .game_name {
             a {
                 color: unset;
             }
             max-width: 15rem;
             overflow: hidden;
-            padding-left: 0.5em;
             text-overflow: ellipsis;
         }
 
@@ -525,6 +532,10 @@
 
         .annulled {
             themed opacity annul-opacity;
+        }
+
+        th {
+            padding-right: 0.5em;
         }
     }
 
