--- a/src/components/NetworkStatus/NetworkStatus.styl
+++ b/src/components/NetworkStatus/NetworkStatus.styl
@@ -39,23 +39,20 @@
     }
 
 
-    .icon.close {
+    .icon {
         position: relative;
         display: inline-flex;
         width: 2rem;
         height: 2rem;
         align-items: center;
         justify-content: center;
+    }
+
+    .icon.close {
         cursor: pointer;
     }
 
     .icon.no-wifi {
-        position: relative;
-        display: inline-flex;
-        width: 2rem;
-        height: 2rem;
-        align-items: center;
-        justify-content: center;
         margin-right: 1rem;
     }
 
