move the tooltip higher

--- a/src/components/NetworkStatus/NetworkStatus.styl
+++ b/src/components/NetworkStatus/NetworkStatus.styl
@@ -12,7 +12,7 @@
     display: inline-flex;
     position: absolute;
     z-index: z.network-warning;
-    top: navbar-height;
+    top: 0.5em;
     right: 0;
     min-width: 10rem;
     height: 2.5rem;
