Sealing: Add prominent message when entering the SR phase if there are places that still need sealing.

--- a/src/views/Game/PlayControls.styl
+++ b/src/views/Game/PlayControls.styl
@@ -141,4 +141,39 @@
         text-wrap: balance;
         text-wrap-mode: balance;
     }
+    
+    .needs-sealing {
+        margin: 1.0rem;
+        padding: 1.0rem;
+        font-weight: bold;
+        border-radius: 0.2rem;
+        font-size: 1.1rem;
+        themed background-color warning-bg
+        themed color warning-fg
+
+        .needs-sealing-coordinates {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 1.0rem;
+            font-weight: bold;
+            themed background-color warning-bg
+            themed color warning-fg
+
+            .needs-sealing-box {
+                flex-grow: 0;
+                flex-shrink: 0;
+                flex-basis: 1.0rem;
+                display: inline-block;
+                width: 1.0rem;
+                height: 1.0rem;
+                background-color: red;
+                border: 0.2rem solid #E079CE;
+                margin-right: 0.5rem;
+            }
+            div {
+                flex: 1;
+            }
+        }
+    }
 }
