Initial support for manually marking scores in analysis mode and reviews

--- a/src/views/Game/PlayControls.styl
+++ b/src/views/Game/PlayControls.styl
@@ -176,4 +176,25 @@
             }
         }
     }
+    
+    .score-square {
+        display: inline-block;
+        width: 0.7rem;
+        height: 0.7rem;
+        border: 0.3rem solid #f00;
+        
+        &.black {
+            background-color: black;
+            border-color: #555;
+        }
+        &.white {
+            background-color: white;
+            border-color: #AAA;
+        }
+    }
+    
+    .btn-group {
+        vertical-align: middle;
+        display: inline-flex;
+    }
 }
