Add pass to conditional planner

--- a/src/views/Game/Game.styl
+++ b/src/views/Game/Game.styl
@@ -132,6 +132,11 @@ goban-view-bar-width=400px
         .buttons {
             display: flex;
             justify-content: space-between;
+
+            button {
+                min-height: 2em;
+                height: auto;
+            }
         }
     }
 
