Add GoTV component

--- a/src/components/NavBar/NavBar.styl
+++ b/src/components/NavBar/NavBar.styl
@@ -164,7 +164,7 @@ header.NavBar {
     }
 
     @media only screen and (max-width: 600px) {
-        .FriendIndicator, .IncidentReportIndicator, .TournamentIndicator, .TurnIndicator, .NotificationIndicator, .ChatIndicator {
+        .FriendIndicator, .IncidentReportIndicator, .TournamentIndicator, .TurnIndicator, .NotificationIndicator, .ChatIndicator, .GoTVIndicator {
             padding-left: 0.3rem !important;
             padding-right: 0.3rem !important;
         }
@@ -584,7 +584,7 @@ header.NavBar {
         themed background-color navbar-background-color
     }
 
-    .FriendIndicator, .IncidentReportIndicator, .TournamentIndicator, .TurnIndicator, .NotificationIndicator, .ChatIndicator {
+    .FriendIndicator, .IncidentReportIndicator, .TournamentIndicator, .TurnIndicator, .NotificationIndicator, .ChatIndicator, .GoTVIndicator {
         padding-left: 0.6rem;
         padding-right: 0.6rem;
     }
@@ -602,7 +602,7 @@ header.NavBar {
         }
     }
 
-    .FriendIndicator, .IncidentReportIndicator, .NotificationIndicator, .TournamentIndicator {
+    .FriendIndicator, .IncidentReportIndicator, .NotificationIndicator, .TournamentIndicator, .GoTVIndicator {
         .count, .time {
             // This offsets the baseline padding added to the count so things center correctly.
             margin-bottom: -0.2rem;
