--- a/src/views/GoTV/GoTV.styl
+++ b/src/views/GoTV/GoTV.styl
@@ -169,8 +169,7 @@
             transform: translateX(0)
 
         .EmbeddedChatCard
-            margin: 0px
-            display: flex
-            flex-direction: column
-            height: calc(100vh - (var(--navbar-height) + 1rem))
+            min-width: 100%
+            margin: 0
+            height: calc(100vh - (var(--navbar-height) + 1.5rem))
             overflow: hidden
