--- a/src/views/GoTV/GoTV.styl
+++ b/src/views/GoTV/GoTV.styl
@@ -15,16 +15,10 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-html, body
-    margin: 0
-    padding: 0
-    height: 100%
-    overflow: hidden
-
 #gotv-container
     display: flex
     flex-direction: column
-    height: calc(100vh - var(--navbar-height))
+    height: calc(100vh - var(--navbar-height) - 4px)
     width: 100vw
     overflow: hidden
 
