--- a/src/views/GoTV/GoTV.styl
+++ b/src/views/GoTV/GoTV.styl
@@ -1,20 +1,3 @@
-/*
- * Copyright (C)  Online-Go.com
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- */
-
 #gotv-container
     display: flex
     flex-direction: column
@@ -224,3 +207,90 @@
 
         .chat-section.hidden
             display: none
+
+@media (max-width: 768px)
+    #gotv-container .gotv-layout
+        flex-direction: column
+
+    #gotv-container .gotv-layout .list-pane
+        width: 100vw
+        height: 100%
+        position: absolute
+        top: 0
+        left: 0
+        z-index: 100
+        transform: translateY(0)
+        transition: transform 0.3s ease-in-out
+
+    #gotv-container .gotv-layout .list-pane.collapsed
+        transform: translateY(-100%)
+
+    #gotv-container .gotv-layout .list-pane.expanded
+        transform: translateY(0)
+        width: 100vw 
+        height: 100%
+
+    #gotv-container .gotv-layout .list-pane .streams-header
+        display: flex
+        justify-content: space-between
+        align-items: center
+        padding: 10px
+        background: #f0f0f0
+
+    #gotv-container .gotv-layout .list-pane .back-button
+        background: none
+        border: none
+        font-size: 1.5rem
+        cursor: pointer
+
+    #gotv-container .gotv-layout .list-pane-control
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 50px
+        display: flex
+        align-items: center
+        justify-content: center
+        background: #005580
+        color: #FFFFFF
+        cursor: pointer
+        z-index: 110
+        border-radius: 0
+        transform: translateY(0)
+        themed background-color card-background-color
+        border: 1px solid transparent
+        themed border-color shade4 
+
+    #gotv-container .gotv-layout .chat-pane-control
+        display: none
+
+    #gotv-container .gotv-layout .list-pane.expanded ~ .list-pane-control
+        z-index: 0
+        opacity: 0
+
+    #gotv-container .gotv-layout .stream-pane
+        flex: 0 0 auto
+
+        width: 100vw
+        margin-top: 50px
+
+    #gotv-container .gotv-layout .chat-pane
+        width: 100vw
+        flex: 1 1 auto
+        flex-grow: 1
+        overflow-y: auto
+        themed background-color bg
+        transition: transform 0.3s ease-in-out
+        transform: translateY(0)
+
+        &.collapsed
+            flex: 1 1 auto
+            transform: translateX(0)
+
+        &.expanded
+            flex: 1 1 auto
+            transform: translateX(0)
+
+
+
