Maintain 16:9 aspect ratio for stream pane on mobile

--- a/src/views/GoTV/GoTV.styl
+++ b/src/views/GoTV/GoTV.styl
@@ -1,3 +1,20 @@
+/*
+ * Copyright (C)  Online-Go.com
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 #gotv-container
     display: flex
     flex-direction: column
@@ -208,7 +225,7 @@
         .chat-section.hidden
             display: none
 
-@media (max-width: 768px)
+@media only screen and (max-width: 900px)
     #gotv-container .gotv-layout
         flex-direction: column
 
@@ -270,10 +287,10 @@
         opacity: 0
 
     #gotv-container .gotv-layout .stream-pane
-        flex: 0 0 auto
-
         width: 100vw
         margin-top: 50px
+        flex: none
+        height: calc(100vw * 9 / 16)
 
     #gotv-container .gotv-layout .chat-pane
         width: 100vw
@@ -290,6 +307,4 @@
         &.expanded
             flex: 1 1 auto
             transform: translateX(0)
-
-
 
