--- a/src/views/GoTV/StreamCard.styl
+++ b/src/views/GoTV/StreamCard.styl
@@ -17,7 +17,8 @@
 
 .stream-item
     position: relative
-    width: 100%
+    width: 320px
+    height: 180px
     margin-bottom: 15px
     cursor: pointer
     overflow: hidden
@@ -25,6 +26,7 @@
     transition: transform 0.3s, box-shadow 0.3s
     background-color: var(--shade3)
     box-sizing: border-box
+    display: inline-block
 
     &:hover
         transform: scale(1.05)
@@ -37,91 +39,95 @@
         .full-title
             opacity: 1
 
-.overlay
-    position: absolute
-    top: 0
-    left: 0
-    width: 100%
-    height: 100%
-    background-color: rgba(0, 0, 0, 0.5)
-    opacity: 0
-    transition: opacity 0.3s
+    .overlay
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        background-color: rgba(0, 0, 0, 0.5)
+        opacity: 0
+        transition: opacity 0.3s
 
-.full-title
-    position: absolute
-    top: 50%
-    left: 50%
-    transform: translate(-50%, -50%)
-    color: white
-    font-size: 16px
-    font-weight: bold
-    text-align: center
-    opacity: 0
-    transition: opacity 0.3s
-    padding: 0 10px
-    white-space: normal
-    word-wrap: break-word
+    .full-title
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+        color: white
+        font-size: 16px
+        font-weight: bold
+        text-align: center
+        opacity: 0
+        transition: opacity 0.3s
+        padding: 0 10px
+        white-space: normal
+        word-wrap: break-word
 
-.stream-item.selected-stream
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3)
-    border: 2px solid var(--primary)
+    .stream-item.selected-stream
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3)
+        border: 2px solid var(--primary)
 
-.stream-thumbnail
-    width: 100%
-    height: 180px
-    object-fit: cover
-    border-top-left-radius: 8px
-    border-top-right-radius: 8px
+    .stream-thumbnail
+        width: 100%
+        height: 100%
+        object-fit: cover
+        border-top-left-radius: 8px
+        border-top-right-radius: 8px
 
-.stream-username
-    font-size: 14px
-    position: absolute
-    top: 10px
-    left: 10px
-    color: white
-    font-weight: bold
-    background: rgba(0, 0, 0, 0.5)
-    padding: 2px 5px
-    border-radius: 3px
+    .stream-username
+        font-size: 14px
+        position: absolute
+        top: 10px
+        left: 10px
+        color: white
+        font-weight: bold
+        background: rgba(0, 0, 0, 0.5)
+        padding: 2px 5px
+        border-radius: 3px
 
-.viewer-count
-    font-size: 14px
-    font-weight: bold
-    position: absolute
-    top: 10px
-    right: 10px
-    background: rgba(0, 0, 0, 0.5)
-    padding: 2px 5px
-    border-radius: 3px
-    color: white
+    .viewer-count
+        font-size: 14px
+        font-weight: bold
+        position: absolute
+        top: 10px
+        right: 10px
+        background: rgba(0, 0, 0, 0.5)
+        padding: 2px 5px
+        border-radius: 3px
+        color: white
 
-.stream-info
-    position: absolute
-    bottom: 0
-    left: 0
-    width: 100%
-    padding: 10px
-    box-sizing: border-box
-    display: flex
-    justify-content: space-between
-    align-items: center
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0))
-    color: white
-    border-bottom-left-radius: 8px
-    border-bottom-right-radius: 8px
+    .stream-info
+        position: absolute
+        bottom: 0
+        left: 0
+        width: 100%
+        padding: 10px
+        box-sizing: border-box
+        display: flex
+        justify-content: space-between
+        align-items: center
+        background: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0))
+        color: white
+        border-bottom-left-radius: 8px
+        border-bottom-right-radius: 8px
 
-.stream-info h3
-    margin: 0
-    font-size: 16px
-    font-weight: bold
-    white-space: nowrap
-    overflow: hidden
-    text-overflow: ellipsis
-    transition: opacity 0.3s
+    .stream-info h3
+        margin: 0
+        font-size: 16px
+        font-weight: bold
+        white-space: nowrap
+        overflow: hidden
+        text-overflow: ellipsis
+        transition: opacity 0.3s
 
-.language
-    font-size: 14px
-    font-weight: bold
-    background: rgba(0, 0, 0, 0.5)
-    padding: 2px 5px
-    border-radius: 3px
+    .language
+        font-size: 14px
+        font-weight: bold
+        background: rgba(0, 0, 0, 0.5)
+        padding: 2px 5px
+        border-radius: 3px
+
+@media only screen and (max-width: 900px)
+    .stream-item
+        margin: 10px
