Change back button to up arrow

--- a/src/views/GoTV/GoTV.styl
+++ b/src/views/GoTV/GoTV.styl
@@ -248,6 +248,7 @@
         border: none
         font-size: 1.5rem
         cursor: pointer
+        box-shadow: none
 
     #gotv-container .gotv-layout .list-pane-control
         position: absolute
