--- a/src/views/GoTV/StreamCard.styl
+++ b/src/views/GoTV/StreamCard.styl
@@ -27,6 +27,7 @@
     background-color: var(--shade3)
     box-sizing: border-box
     display: inline-block
+    border: 2px solid transparent
 
     &:hover
         transform: scale(1.05)
@@ -65,15 +66,15 @@
         word-wrap: break-word
 
     &.selected-stream
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3)
-        border: 2px solid var(--primary)
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5)
+        border-radius: 8px
+        themed border-color primary
+        
 
     .stream-thumbnail
         width: 100%
         height: 100%
         object-fit: cover
-        border-top-left-radius: 8px
-        border-top-right-radius: 8px
 
     .stream-username
         font-size: 14px
