Use dvh instead of vh to fix mobile scroll issue

--- a/src/views/GoTV/GoTV.styl
+++ b/src/views/GoTV/GoTV.styl
@@ -18,7 +18,7 @@
 #gotv-container
     display: flex
     flex-direction: column
-    height: calc(100vh - var(--navbar-height) - 4px)
+    height: calc(100dvh - var(--navbar-height) - 4px)
     width: 100vw
     overflow: hidden
 
