Fix bug causing slight scroll in chat pane

--- a/src/views/GoTV/GoTV.styl
+++ b/src/views/GoTV/GoTV.styl
@@ -22,6 +22,9 @@
     width: 100vw
     overflow: hidden
 
+    div
+        box-sizing: border-box
+
     .gotv-layout
         display: flex
         height: 100%
@@ -42,7 +45,6 @@
             themed background-color bg
             transition: transform 0.3s ease-in-out
             padding: 0 10px 0 10px
-            box-sizing: border-box
             z-index: 2
 
         .list-pane.collapsed
@@ -179,7 +181,6 @@
             margin: 0
             height: 100%
             overflow: hidden
-            box-sizing: border-box
 
         .chat-tabs
             display: flex
