Remove hover effect for list pane control on mobile

--- a/src/views/GoTV/GoTV.styl
+++ b/src/views/GoTV/GoTV.styl
@@ -312,6 +312,9 @@
             content: "\f0c9" // FontAwesome list icon
             display: inline-block
             margin-left: 10px
+        
+        &.collapsed:hover::after            
+            content: "\f0c9"; // FontAwesome list icon
 
     #gotv-container .gotv-layout .chat-pane-control
         display: none
