Ensure box-sizing applies to mobile layout

--- a/src/views/GoTV/GoTV.styl
+++ b/src/views/GoTV/GoTV.styl
@@ -274,6 +274,9 @@
     #gotv-container .gotv-layout
         flex-direction: column
 
+        div
+            box-sizing: border-box
+
     #gotv-container .gotv-layout .list-pane
         display: flex
         flex-wrap: wrap
