Add missing } from handicap-present style definition

--- a/src/views/User/User.styl
+++ b/src/views/User/User.styl
@@ -544,6 +544,7 @@
         .handicap-present { // this is for an actual number
             text-align: right;
             padding-right: 0.4rem;  // get the number away from the next column
+        }
     }
 
 
