Remove OGS chat and chat pane tabs

--- a/src/views/GoTV/GoTV.styl
+++ b/src/views/GoTV/GoTV.styl
@@ -232,7 +232,7 @@
 
         .chat-content
             position: relative
-            height: calc(100% - 45px)
+            height: 100%
 
         .chat-section
             position: absolute
