Use Twitch.Embed for stream video

--- a/src/views/GoTV/GoTV.styl
+++ b/src/views/GoTV/GoTV.styl
@@ -79,6 +79,10 @@
             position: relative
             transition: margin-left 0.3s ease-in-out
 
+            #twitch-embed
+                height: 100%
+                width: 100%
+
         .stream-pane.expanded
             margin-left: 0
 
