Add notifications for channels user follows on twitch

--- a/src/views/GoTV/GoTVIndicator.styl
+++ b/src/views/GoTV/GoTVIndicator.styl
@@ -24,6 +24,7 @@
     cursor: pointer;
     themed color shade2;
     text-decoration: none;
+    position: relative;
 
     .fa-tv {
         background: linear-gradient(135deg, #00c6ff, #ffdd00);
