--- a/src/views/Settings/Settings.styl
+++ b/src/views/Settings/Settings.styl
@@ -19,6 +19,20 @@
     // here
     user-select: none;
 
+    .dev-tools {
+        color: black;
+        themed background-color shade0
+        border: 1px solid red;
+        border-radius: 10px;
+        padding: 0 20px 20px 20px;
+        margin-bottom: 20px;
+
+        input{
+            color: red;
+            background-color: white;
+        }
+    }
+
     .PreferenceLine {
         display: flex;
         max-width: 100vw;
