Support a placeholder in Autotranslate

--- a/src/components/AutoTranslate/AutoTranslate.styl
+++ b/src/components/AutoTranslate/AutoTranslate.styl
@@ -11,4 +11,11 @@
         text-align: right;
         themed background-color shade5
     }
+    .placeholder {
+        themed color fg;
+        font-style: italic;
+        font-size: smaller;
+        themed background-color bg
+        padding: 0.5em;
+    }
 }
