--- a/src/views/Play/Play.styl
+++ b/src/views/Play/Play.styl
@@ -65,13 +65,14 @@
 
     .automatch-content {
 
-        .btn-group {            
-            width: 100%;
+        .btn-group {    
+            height: max-content;        
+            width: auto;
             display: flex;
             flex-direction: row;
             flex-wrap: nowrap;
             justify-content: space-between;
-            border-radius: 10px;
+            padding: 0.25rem 0.5rem 0.25rem 0.5rem;
 
             button {
                 font-weight: bold;
@@ -79,11 +80,22 @@
                 width: 100%;
                 height: 75%;
                 min-height: 2rem
-                padding: 0.5rem;
+                padding: 0.5rem; 
             }
-
+            
             button::before {
                 content: none;
+            }
+
+            .automatch-play {
+                padding-top: 1rem;
+                padding-bottom: 1rem;
+
+                margin-top: 0.5rem;
+                margin-bottom: 0.2rem;
+
+                font-size: xx-large;
+                font-weight: bold;
             }
         }
     }
@@ -91,15 +103,6 @@
     .automatch-speed-name {
         font-size: large;
         margin-bottom: 0.3rem;
-    }
-
-    .automatch-play {
-        font-size: xx-large;
-        font-weight: bold;
-        width: 100%
-        margin-left: 0;
-        margin-right: 0;
-        border-radius: 5px;
     }
 
     .rengo-management-row {
@@ -197,7 +200,7 @@
             flex-grow: 1;
             flex-basis: 48%;
             height: 4rem;
-            margin: 0.2rem;
+            margin: 0.3rem;
             white-space: nowrap;
             display: flex;
             align-items: center;
