Give same space to lower buttons

--- a/src/views/Play/Play.styl
+++ b/src/views/Play/Play.styl
@@ -191,8 +191,11 @@
         display: flex;
         justify-content: space-around;
         align-content: stretch
-        width: 100%;
+        width: auto;
         flex-wrap: wrap;
+
+        padding-left: 0.3rem;
+        padding-right: 0.3rem;
 
         button {
             font-size: 1.1rem;
