Automatically focus submit move button

--- a/src/views/Game/Game.styl
+++ b/src/views/Game/Game.styl
@@ -38,6 +38,12 @@
     .submit-button {
         white-space: nowrap;
     }
+    .autofocus-submit-button:focus::after {
+        content: ' ⏎';
+    }
+    .autofocus-submit-button:active::after {
+        content: none;
+    }
 }
 
 .condensed-game-information {
