Make notifications clickable

--- a/src/views/Settings/Settings.styl
+++ b/src/views/Settings/Settings.styl
@@ -33,8 +33,11 @@
         }
     }
 
+    .normal-preferences.normal-preferences.hidden{
+        display: none;
+    }
+
     .PreferenceLine {
-        display: flex;
         max-width: 100vw;
         flex-wrap: wrap;
         margin-bottom: 2rem;
