Give moderators a view of the outcomes over time for each CM.

--- a/src/views/ReportsCenter/ReportsCenterCMInfo.styl
+++ b/src/views/ReportsCenter/ReportsCenterCMInfo.styl
@@ -11,4 +11,13 @@
             height: 50%
         }
     }
+
+    .individual-overview {
+        .aggregate-vote-activity-graph {
+            height: 200px;
+        }
+        th {
+            text-align: center;
+        }
+    }
 }
