--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -528,3 +528,64 @@ nowrap()
 
 @require '../node_modules/react-table/react-table.css';
 @require '../node_modules/react-dynamic-help/lib/es5/DynamicHelp.css';
+
+// @require '../node_modules/react-tabs/style/react-tabs.css';
+//
+// Put our theming into react-tabs css: copied from them and modified
+
+.react-tabs {
+  -webkit-tap-highlight-color: transparent;
+}
+
+.react-tabs__tab-list {
+  border-bottom: 1px solid #aaa;
+  margin: 0 0 10px;
+  padding: 0;
+}
+
+.react-tabs__tab {
+  display: inline-block;
+  border: 1px solid transparent;
+  border-bottom: none;
+  bottom: -1px;
+  position: relative;
+  list-style: none;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+.react-tabs__tab--selected {
+  border-color: #aaa;
+  themed background bg;
+  themed color fg;
+  border-radius: 5px 5px 0 0;
+}
+
+.react-tabs__tab--disabled {
+  color: GrayText;
+  cursor: default;
+}
+
+.react-tabs__tab:focus {
+  outline: none;
+}
+
+.react-tabs__tab:focus:after {
+  content: '';
+  position: absolute;
+  height: 5px;
+  left: -4px;
+  right: -4px;
+  bottom: -5px;
+  themed background bg;
+}
+
+
+.react-tabs__tab-panel {
+  display: none;
+}
+
+.react-tabs__tab-panel--selected {
+  display: block;
+  padding: 10px;
+}
