Make the CM name column fixed width

--- a/src/views/ReportsCenter/ReportsCenterCMInfo.styl
+++ b/src/views/ReportsCenter/ReportsCenterCMInfo.styl
@@ -19,6 +19,10 @@
         th {
             text-align: center;
         }
+        .cm-name a {
+            max-width: 10rem;
+            overflow: hidden;
+        }
     }
 
     // We use `disable` for tabs they don't have permission for:
